# python-open-restaurant-fastapi

./: .coveragerc  .env.sample  .env_docker  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  alembic.ini  docker-compose.yml  pip_compile.sh  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  setup  test.sh
.github/: dependabot.yml
.github/workflows/: python.yml  python_3_10.yml
alembic/: env.py
alembic/versions/: 2022_12_07_2131-11b40de5c0cb_add_restaurant_table.py  2022_12_07_2144-4096b5e1c05a_add_restaurant_dayta.py
app/: api_settings.py  app_init.py  db.py  main.py  models.py  routes.py
app/config/: __init__.py  api_settings.py  database_settings.py
app/database/: __init__.py  db.py  models.py
app/utils/: __init__.py  csv_utils.py  log_utils.py
docs/: brainstorming.md
scripts/: ensure_venv.sh  setup_python_app.sh
src/: app_init.py  csv_utils.py  db.py  log_utils.py  main.py
src/config/: api_settings.py
src/utils/: __init__.py
test/: conftest.py  fixtures.py  test_csv_import.py  test_main.py
tests/: conftest.py  fixtures.py  test_csv_import.py  test_main.py  test_routes.py
tests/integration/: README.md  test_docker_api.py
