[tool.poetry]
name = "python-open-restaurant-fastapi"
version = "0.1.0"
description = ""
authors = ["Matthew Lonis <mattlonis@gmail.com>"]
license = "The Unlicense"
readme = "README.md"
packages = [{ include = "python_open_restaurant_fastapi" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.1"
alembic = "^1.16.4"
alembic-utils = "^0.8.8"
asyncpg = "^0.30.0"
fastapi = "^0.116.1"
httpx = "^0.28.1"
psycopg2-binary = "^2.9.10"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
sqlalchemy = { version = "^2.0.41", extras = ["asyncio"] }
sqlalchemy-utils = "^0.42.0"
sqlmodel = "^0.0.24"

[tool.poetry.group.test.dependencies]
coverage = "^7.9.2"
flake8 = "^7.3.0"
psycopg = "^3.2.10"
pylint = "^3.3.7"
pylint-junit = "^0.3.5"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^6.3.0"
pytest-postgresql = "^7.0.2"
pytest-watch = "^4.2.0"
pytest-xdist = { version = "^3.8.0", extras = ["psutil"] }

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
click = "^8.2.1"
configupdater = "^3.1.1"
devtools = "^0.12.2"
isort = "^6.0.1"
pre-commit = "^4.2.0"
ruamel-yaml = "^0.18.14"
tomlkit = "^0.13.3"
tox = "^4.30.2"
uvicorn = { version = "^0.35.0", extras = ["standard"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 125

[tool.isort]
line_length = 125
profile = "black"

[tool.pytest.ini_options]
addopts = "--ignore=./utility-repo-scripts"
asyncio_default_fixture_loop_scope = "function"
log_cli = false
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = ["docker: marks tests as docker (deselect with '-m \"not docker\"')"]

[tool.mypy]
plugins = "pydantic.mypy"
