[tool.poetry]
name = "python-open-restaurant-fastapi"
version = "0.1.0"
description = ""
authors = ["Matthew Lonis <mattlonis@gmail.com>"]
license = "The Unlicense"
readme = "README.md"
packages = [{ include = "python_open_restaurant_fastapi" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.1"
alembic = "^1.18.3"
alembic-utils = "^0.8.8"
asyncpg = "^0.31.0"
fastapi = "^0.128.0"
httpx = "^0.28.1"
psycopg2-binary = "^2.9.11"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
sqlalchemy = { version = "^2.0.46", extras = ["asyncio"] }
sqlalchemy-utils = "^0.42.1"
sqlmodel = "^0.0.32"

[tool.poetry.group.test.dependencies]
coverage = "^7.13.2"
flake8 = "^7.3.0"
psycopg = "^3.3.2"
pylint = "^4.0.4"
pylint-junit = "^0.3.5"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-postgresql = "^8.0.0"
pytest-watch = "^4.2.0"
pytest-xdist = { version = "^3.8.0", extras = ["psutil"] }

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
click = "^8.3.1"
configupdater = "^3.1.1"
devtools = "^0.12.2"
isort = "^7.0.0"
pre-commit = "^4.5.1"
ruamel-yaml = "^0.19.1"
tomlkit = "^0.14.0"
tox = "^4.34.1"
uvicorn = { version = "^0.40.0", extras = ["standard"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 125

[tool.isort]
line_length = 125
profile = "black"

[tool.pytest.ini_options]
addopts = "--ignore=./utility-repo-scripts"
asyncio_default_fixture_loop_scope = "function"
log_cli = false
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = ["docker: marks tests as docker (deselect with '-m \"not docker\"')"]

[tool.mypy]
plugins = "pydantic.mypy"
